# sps_genai_assignment3

./: Dockerfile  dataloader_gan.py  generator.py  main_fastapi_gan.py  main_gan.py  model_gan.py  pyproject.toml  trainer_gan.py
